--- a/css/main.css
+++ b/css/main.css
@@ -3,11 +3,29 @@
 /* @import FONT THE GOOGLE [Source+Sans+Pro 300 AND 400] */
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400&display=swap');
 
+/* @import ICON THE BOOTSTRAP */
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css");
+
 /* RESET ALL STYLE */
 * {
     border: 1px solid red;
     margin: 0px;
     padding: 0px;
+}
+
+/* RESET ALL STYLE H>* */
+h1,h2,h3,h4,h5,h6 {
+    margin: 0px !important;
+}
+
+/* RESET ALL STYLE INPUT */
+button {
+    border-radius: 0px !important;
+}
+
+/* RESET ALL STYLE IMG */
+img {
+    width: 100%;
 }
 
 /* VARIABLE OF THE AMBIENT */
