--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,8 @@
 
     --white-primary: #fff;
 
+    --gray-primary: #c0c7d1;
+
     --yellow-primary: #ffc107;
 
     --blue-primary: #0a58ca;
@@ -30,7 +32,12 @@
 }
 
 /* RESET ALL STYLE H>* */
-h1,h2,h3,h4,h5,h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     margin: 0px !important;
 }
 
@@ -51,19 +58,13 @@ img {
 
 /* DEFINE ALL STYLE IN BODY */
 body {
-    background-image: url('../img/svg/layered-waves-haikei-down.svg');
-    background-size: 100%;
-    background-color: rgb(255, 255, 255);
-    background-position-y: 0px;
-    background-position-x: 0px;
-    background-repeat: no-repeat;
     height: 100vh;
     font-family: 'Source Sans Pro', sans-serif;
+    background: gray !important;
 }
 
 /* CONTAINER MAIN MASTER */
 main {
-    border: 1px solid red;
     width: 100%;
     height: 100%;
     display: flex;
@@ -74,21 +75,26 @@ main {
 /* CONTAINER SECTION MASTER */
 section {
     width: calc(100% - 50%);
-    height: 70%;
+    border-radius: 10px;
     background: var(--white-primary);
+    background-image: url('../img/svg/wave-haikei-vertical.svg');
+    background-size: auto;
+    background-repeat: no-repeat;
+    color: var(--white-primary);
+    padding: 10px;
 }
 
 /* MASTER .COL H1 + ICON */
-section > .container:nth-child(1) > .row:nth-child(1) > div:nth-child(1) {
-    border: 1px solid red;
+section>.container:nth-child(1)>.row:nth-child(1)>div:nth-child(1) {
     display: flex;
     justify-content: center;
     align-items: center;
     padding: var(--size-default);
     margin: 20px 0 10px 0;
 }
+
 /* .COL H1 + ICON */
-section > .container:nth-child(1) > .row:nth-child(1) > div:nth-child(1) > div {
+section>.container:nth-child(1)>.row:nth-child(1)>div:nth-child(1)>div {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -97,8 +103,9 @@ section > .container:nth-child(1) > .row:nth-child(1) > div:nth-child(1) > div {
     background: var(--blue-primary);
     border-radius: var(--seze-default-border);
 }
+
 /* .COL H1 */
-section > .container:nth-child(1) > .row:nth-child(1) > div:nth-child(1) > div > h1 {
+section>.container:nth-child(1)>.row:nth-child(1)>div:nth-child(1)>div>h1 {
     color: var(--black-primary);
     font-size: max(1.5vw, 10pt);
     color: var(--white-primary);
@@ -106,30 +113,85 @@ section > .container:nth-child(1) > .row:nth-child(1) > div:nth-child(1) > div >
 }
 
 /* MASTER .ROW2 */
-section > .container:nth-child(1) > .row:nth-child(2) > div:nth-child(1) {
+section>.container:nth-child(1)>.row:nth-child(2)>div:nth-child(1) {
     padding: var(--size-default);
     margin: 0px 0 5px 0;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
 /* .ROW2 .COL SPAN */
-section > .container:nth-child(1) > .row:nth-child(2) > div:nth-child(1) > span {
-    border: 1px solid red;
+section>.container:nth-child(1)>.row:nth-child(2)>div:nth-child(1)>span {
     font-size: max(2vw, 15pt);
     font-weight: 500;
 }
 
 /* MASTER .ROW3 */
-section > .container:nth-child(1) > .row:nth-child(3) > div:nth-child(1) {
-    margin: 0px 0 5px 0;
+section>.container:nth-child(1)>.row:nth-child(3)>div:nth-child(1) {
+    margin: 0px 0 20px 0;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
 /* .ROW3 DIV SPAN */
-section > .container:nth-child(1) > .row:nth-child(3) > div:nth-child(1) > div {
-    border: 1px solid red;
-    width: 70%;
+section>.container:nth-child(1)>.row:nth-child(3)>div:nth-child(1)>div {
+    width: 90%;
     text-align: center;
+}
+
+/* MASTER .ROW4 */
+section>.container:nth-child(1)>.row:nth-child(4) {
+    justify-content: center;
+}
+/* MASTER .ROW4 DIV */
+section>.container:nth-child(1)>.row:nth-child(4)>div {
+    width: calc(85% / 3);
+    margin: 0 0 20px 0;
+}
+/* .ROW4 CARD'S IMG */
+section>.container:nth-child(1)>.row:nth-child(4)>div>div>div>img {
+    width: 50px;
+}
+/* .ROW4 CARD'S SPAN */
+section>.container:nth-child(1)>.row:nth-child(4)>div>div>div>span {
+    font-size: max(1vw, 10pt);
+    font-weight: 500;
+}
+/* .ROW4 CARD'S */
+section>.container:nth-child(1)>.row:nth-child(4)>div>div {
+    height: 100%;
+    padding: 10px;
+    border-radius: 10px;
+    border: 2px solid var(--gray-primary);
+    background: var(--white-primary);
+    color: var(--black-primary);
+    text-align: center;
+    width: fit-content;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
+/* RESPONSIVIDADE PARA TELA MEDIA */
+@media only screen and (max-width: 768px) {
+    /* css aqui */
+    section {
+        width: calc(100% - 20%) !important;
+    }
+}
+
+/* RESPONSIVIDADE PARA TELA PEQUENA */
+@media only screen and (max-width: 480px) {
+    /* css aqui */
+    
+}
+
+/* RESPONSIVIDADE PARA TELA GRANDE */
+@media only screen and (min-width: 1200px) {
+    section {
+        background-image: url('../img/svg/wave-haikei-horizontal.svg');
+    }
 }
