--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,7 @@
 /* VARIABLE OF THE AMBIENT */
 :root {
     --black-primary: #343a40;
+    --back-background: #343a403d;
 
     --white-primary: #fff;
 
@@ -25,6 +26,9 @@
     --yellow-primary: #ffc107;
 
     --blue-primary: #0a58ca;
+    --blue-background: #0d6efd7a;
+
+    --green-primary: #198754;
 
     /* SIZE DEFAULT */
     --size-default: 10px;
@@ -84,7 +88,7 @@ section {
     padding: 10px;
 }
 
-/* MASTER .COL H1 + ICON */
+/* MASTER .ROW1 .COL H1 + ICON */
 section>.container:nth-child(1)>.row:nth-child(1)>div:nth-child(1) {
     display: flex;
     justify-content: center;
@@ -92,8 +96,7 @@ section>.container:nth-child(1)>.row:nth-child(1)>div:nth-child(1) {
     padding: var(--size-default);
     margin: 20px 0 10px 0;
 }
-
-/* .COL H1 + ICON */
+/* .ROW1 .COL H1 + ICON */
 section>.container:nth-child(1)>.row:nth-child(1)>div:nth-child(1)>div {
     display: flex;
     justify-content: center;
@@ -103,8 +106,7 @@ section>.container:nth-child(1)>.row:nth-child(1)>div:nth-child(1)>div {
     background: var(--blue-primary);
     border-radius: var(--seze-default-border);
 }
-
-/* .COL H1 */
+/* .ROW1 .COL H1 */
 section>.container:nth-child(1)>.row:nth-child(1)>div:nth-child(1)>div>h1 {
     color: var(--black-primary);
     font-size: max(1.5vw, 10pt);
@@ -120,7 +122,6 @@ section>.container:nth-child(1)>.row:nth-child(2)>div:nth-child(1) {
     justify-content: center;
     align-items: center;
 }
-
 /* .ROW2 .COL SPAN */
 section>.container:nth-child(1)>.row:nth-child(2)>div:nth-child(1)>span {
     font-size: max(2vw, 15pt);
@@ -134,7 +135,6 @@ section>.container:nth-child(1)>.row:nth-child(3)>div:nth-child(1) {
     justify-content: center;
     align-items: center;
 }
-
 /* .ROW3 DIV SPAN */
 section>.container:nth-child(1)>.row:nth-child(3)>div:nth-child(1)>div {
     width: 90%;
@@ -145,7 +145,7 @@ section>.container:nth-child(1)>.row:nth-child(3)>div:nth-child(1)>div {
 section>.container:nth-child(1)>.row:nth-child(4) {
     justify-content: center;
 }
-/* MASTER .ROW4 DIV */
+/* .ROW4 DIV */
 section>.container:nth-child(1)>.row:nth-child(4)>div {
     width: calc(85% / 3);
     margin: 0 0 20px 0;
@@ -175,18 +175,112 @@ section>.container:nth-child(1)>.row:nth-child(4)>div>div {
     justify-content: center;
 }
 
+/* MASTER .ROW5 */
+section>.container:nth-child(1)>.row:nth-child(5) {
+    height: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 0 5px 0;
+}
+/* .ROW5 DIV */
+section>.container:nth-child(1)>.row:nth-child(5)>div {
+    width: fit-content;
+}
+/* .ROW5 SPAN */
+section>.container:nth-child(1)>.row:nth-child(5)>div>div>span {
+    background: var(--green-primary);
+    border-radius: 5px;
+    padding: 5px 10px 5px 10px;
+}
+
+/* MASTER .ROW6 */
+section>.container:nth-child(1)>.row:nth-child(6) {
+    height: 50%;
+    display: flex;
+    margin: 10px 0 10px 0;
+    align-items: center;
+    justify-content: center;
+}
+/* .ROW6 DIV */
+section>.container:nth-child(1)>.row:nth-child(6)>div {
+    width: 40%;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    background: var(--blue-background);
+    color: var(--black-primary);
+    border-radius: 5px;
+    justify-content: space-around;
+}
+/* .ROW6 DIV LABEL $ */
+section>.container:nth-child(1)>.row:nth-child(6)>div>label {
+    font-size: max(0.5vw, 12pt);
+    font-weight: 600;
+}
+/* .ROW6 DIV SPAN $ */
+section>.container:nth-child(1)>.row:nth-child(6)>div>span {
+    font-size: max(1vw, 18pt);
+    font-weight: 700;
+}
+
+/* MASTER .ROW7 */
+section>.container:nth-child(1)>.row:nth-child(7) {
+    display: flex;
+    margin: 10px 0 5px 0;
+    align-items: center;
+    justify-content: center;
+}
+/* .ROW7 DIV */
+section>.container:nth-child(1)>.row:nth-child(7)>div {
+    width: 40%;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    border-radius: 5px;
+    justify-content: space-around;
+}
+/* .ROW7 BUTTON */
+section>.container:nth-child(1)>.row:nth-child(7)>div>button {
+    border-radius: 5px !important;
+}
+
+/* MASTER .ROW8 */
+section>.container:nth-child(1)>.row:nth-child(8) {
+    display: flex;
+    margin: 0 0 5px 0;
+    align-items: center;
+    justify-content: center;
+}
+/* .ROW8 DIV*/
+section>.container:nth-child(1)>.row:nth-child(8)>div {
+    width: fit-content;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    border-radius: 5px;
+    justify-content: space-around;
+}
+
 /* RESPONSIVIDADE PARA TELA MEDIA */
 @media only screen and (max-width: 768px) {
-    /* css aqui */
+
+    /* SECTION MAIN */
     section {
         width: calc(100% - 20%) !important;
     }
+
+    /* .ROW6 DIV */
+    section>.container:nth-child(1)>.row:nth-child(6)>div {
+        width: 50%;
+    }
+
 }
 
 /* RESPONSIVIDADE PARA TELA PEQUENA */
 @media only screen and (max-width: 480px) {
     /* css aqui */
-    
+
 }
 
 /* RESPONSIVIDADE PARA TELA GRANDE */
