--- a/css/main.css
+++ b/css/main.css
@@ -64,7 +64,8 @@ img {
 
 /* DEFINE ALL STYLE IN BODY */
 body {
-    height: 100vh;
+    width: 100vw;
+    height: 100%;
     font-family: 'Source Sans Pro', sans-serif;
     background: gray !important;
 }
@@ -98,6 +99,7 @@ section>.container:nth-child(1)>.row:nth-child(1)>div:nth-child(1) {
     padding: var(--size-default);
     margin: 20px 0 10px 0;
 }
+
 /* .ROW1 .COL H1 + ICON */
 section>.container:nth-child(1)>.row:nth-child(1)>div:nth-child(1)>div {
     display: flex;
@@ -108,6 +110,7 @@ section>.container:nth-child(1)>.row:nth-child(1)>div:nth-child(1)>div {
     background: var(--blue-primary);
     border-radius: var(--seze-default-border);
 }
+
 /* .ROW1 .COL H1 */
 section>.container:nth-child(1)>.row:nth-child(1)>div:nth-child(1)>div>h1 {
     color: var(--black-primary);
@@ -124,6 +127,7 @@ section>.container:nth-child(1)>.row:nth-child(2)>div:nth-child(1) {
     justify-content: center;
     align-items: center;
 }
+
 /* .ROW2 .COL SPAN */
 section>.container:nth-child(1)>.row:nth-child(2)>div:nth-child(1)>span {
     font-size: max(2vw, 15pt);
@@ -137,6 +141,7 @@ section>.container:nth-child(1)>.row:nth-child(3)>div:nth-child(1) {
     justify-content: center;
     align-items: center;
 }
+
 /* .ROW3 DIV SPAN */
 section>.container:nth-child(1)>.row:nth-child(3)>div:nth-child(1)>div {
     width: 90%;
@@ -147,12 +152,14 @@ section>.container:nth-child(1)>.row:nth-child(3)>div:nth-child(1)>div {
 section>.container:nth-child(1)>.row:nth-child(4) {
     justify-content: center;
 }
+
 /* .ROW4 DIV */
 section>.container:nth-child(1)>.row:nth-child(4)>div {
     width: calc(85% / 3);
     margin: 0 0 20px 0;
     position: relative;
 }
+
 .spanAbsolutePro {
     position: absolute;
     top: -10px;
@@ -164,15 +171,18 @@ section>.container:nth-child(1)>.row:nth-child(4)>div {
     font-size: max(.5vw, 10pt);
     font-weight: 600;
 }
+
 /* .ROW4 CARD'S IMG */
 section>.container:nth-child(1)>.row:nth-child(4)>div>div>div>img {
     width: 50px;
 }
+
 /* .ROW4 CARD'S SPAN */
 section>.container:nth-child(1)>.row:nth-child(4)>div>div>div>span {
     font-size: max(1vw, 10pt);
     font-weight: 500;
 }
+
 /* .ROW4 CARD'S */
 section>.container:nth-child(1)>.row:nth-child(4)>div>div {
     height: 100%;
@@ -197,12 +207,14 @@ section>.container:nth-child(1)>.row:nth-child(5) {
     align-items: center;
     padding: 0 0 5px 0;
 }
+
 /* .ROW5 DIV */
 section>.container:nth-child(1)>.row:nth-child(5)>div {
     width: fit-content;
     justify-content: center;
     align-items: center;
 }
+
 /* .ROW5 DIV SELECT */
 section>.container:nth-child(1)>.row:nth-child(5)>div>div {
     display: flex;
@@ -210,6 +222,7 @@ section>.container:nth-child(1)>.row:nth-child(5)>div>div {
     align-items: center;
     justify-content: space-between;
 }
+
 /* .ROW5 DIV LABEL */
 section>.container:nth-child(1)>.row:nth-child(5)>div>div>label {
     background: var(--blue-system);
@@ -220,6 +233,7 @@ section>.container:nth-child(1)>.row:nth-child(5)>div>div>label {
     padding: 5px 10px 5px 10px;
     margin: 0 0 0 10px;
 }
+
 /* .ROW5 SPAN */
 section>.container:nth-child(1)>.row:nth-child(5)>div>div>span {
     background: var(--green-primary);
@@ -235,6 +249,7 @@ section>.container:nth-child(1)>.row:nth-child(6) {
     align-items: center;
     justify-content: center;
 }
+
 /* .ROW6 DIV */
 section>.container:nth-child(1)>.row:nth-child(6)>div {
     width: 40%;
@@ -246,11 +261,13 @@ section>.container:nth-child(1)>.row:nth-child(6)>div {
     border-radius: 5px;
     justify-content: space-around;
 }
+
 /* .ROW6 DIV LABEL $ */
 section>.container:nth-child(1)>.row:nth-child(6)>div>label {
     font-size: max(0.5vw, 12pt);
     font-weight: 600;
 }
+
 /* .ROW6 DIV SPAN $ */
 section>.container:nth-child(1)>.row:nth-child(6)>div>span {
     font-size: max(1vw, 18pt);
@@ -264,6 +281,7 @@ section>.container:nth-child(1)>.row:nth-child(7) {
     align-items: center;
     justify-content: center;
 }
+
 /* .ROW7 DIV */
 section>.container:nth-child(1)>.row:nth-child(7)>div {
     width: 40%;
@@ -273,6 +291,7 @@ section>.container:nth-child(1)>.row:nth-child(7)>div {
     border-radius: 5px;
     justify-content: space-around;
 }
+
 /* .ROW7 BUTTON */
 section>.container:nth-child(1)>.row:nth-child(7)>div>button {
     border-radius: 5px !important;
@@ -285,6 +304,7 @@ section>.container:nth-child(1)>.row:nth-child(8) {
     align-items: center;
     justify-content: center;
 }
+
 /* .ROW8 DIV */
 section>.container:nth-child(1)>.row:nth-child(8)>div {
     width: fit-content;
@@ -294,12 +314,14 @@ section>.container:nth-child(1)>.row:nth-child(8)>div {
     border-radius: 5px;
     justify-content: space-around;
 }
+
 /* .ROW8 DIV SPAN */
 section>.container:nth-child(1)>.row:nth-child(8)>div>span {
     color: var(--black-primary);
     font-size: max(0.5vw, 12pt);
     font-weight: 400;
 }
+
 /* .ROW8 DIV SPAN A */
 section>.container:nth-child(1)>.row:nth-child(8)>div>span>a {
     color: var(--white-primary);
@@ -319,6 +341,7 @@ section>.container:nth-child(1)>.row:nth-child(9) {
     align-items: center;
     justify-content: center;
 }
+
 /* .ROW9 DIV */
 section>.container:nth-child(1)>.row:nth-child(9)>div {
     width: 50%;
@@ -327,6 +350,11 @@ section>.container:nth-child(1)>.row:nth-child(9)>div {
     flex-direction: row;
     border-radius: 5px;
     justify-content: space-around;
+}
+
+/* RESPONSIVIDADE PARA TELA SMARTPHONE DEITADA */
+@media only screen and (max-width: 556px) {
+    /* CSS aqui */
 }
 
 /* RESPONSIVIDADE PARA TELA MEDIA */
@@ -346,7 +374,32 @@ section>.container:nth-child(1)>.row:nth-child(9)>div {
 
 /* RESPONSIVIDADE PARA TELA PEQUENA */
 @media only screen and (max-width: 480px) {
-    /* css aqui */
+
+    /* SECTION */
+    section {
+        width: 100% !important;
+        border-radius: 0px;
+    }
+
+    /* .ROW4 DIV */
+    section>.container:nth-child(1)>.row:nth-child(4)>div {
+        width: 100%;
+    }
+
+    /* .ROW4 DIV DIV */
+    section>.container:nth-child(1)>.row:nth-child(4)>div>div {
+        width: 100%;
+    }
+
+    /* .ROW6 DIV */
+    section>.container:nth-child(1)>.row:nth-child(6)>div {
+        width: 70% !important;
+    }
+
+    /* .ROW8 */
+    section>.container:nth-child(1)>.row:nth-child(8) {
+        margin: 25px 0 10px 0;
+    }
 
 }
 
