--- a/css/main.css
+++ b/css/main.css
@@ -73,7 +73,7 @@ body {
 /* CONTAINER MAIN MASTER */
 main {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
