--- a/css/main.css
+++ b/css/main.css
@@ -252,7 +252,7 @@ section>.container:nth-child(1)>.row:nth-child(6) {
 
 /* .ROW6 DIV */
 section>.container:nth-child(1)>.row:nth-child(6)>div {
-    width: 40%;
+    width: 50%;
     display: flex;
     align-items: center;
     flex-direction: row;
@@ -352,13 +352,13 @@ section>.container:nth-child(1)>.row:nth-child(9)>div {
     justify-content: space-around;
 }
 
-/* RESPONSIVIDADE PARA TELA SMARTPHONE DEITADA */
-@media only screen and (max-width: 556px) {
-    /* CSS aqui */
-}
-
 /* RESPONSIVIDADE PARA TELA MEDIA */
 @media only screen and (max-width: 768px) {
+
+    /* MAIN MASTER */
+    main {
+        height: 100% !important;
+    }
 
     /* SECTION MAIN */
     section {
